--- a/app/views/sz_core/about.html.erb
+++ b/app/views/sz_core/about.html.erb
@@ -1,15 +1,23 @@
 
 <article>
-  <h1>What you can see</h1>
-  <%= image_tag "Mute_Swan_heads.jpg", :class => 'main-image', :alt => "Mute Swans" %>
+  
+ <center> <%= image_tag "Mute_Swan_heads.jpg", :class => 'main-image', :alt => "Mute Swans" %> 
+    <h4> You can find here links to information on a range of characteristic species
+    that are found in Mole Valley. </h4>
+  </p>
+</center>
+
+<section id = "maintext">
+  <h2><%= link_to "Birds", birds_path %></h2>
   <p>
-    You can find here links to information on a range of characteristic species
-    that are found in Mole Valley.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla interdum justo vitae dolor faucibus ultrices. Ut vel urna eu purus volutpat euismod ornare vel elit. Donec ornare tristique eros non feugiat. Cras pharetra congue mauris. Mauris dictum, urna vitae vehicula pellentesque, quam urna ullamcorper mauris, vitae adipiscing nulla lorem non justo. 
   </p>
 
-  <h2><%= link_to "Birds", birds_path %></h2>
-
+  <p>
   <h2>Bats</h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla interdum justo vitae dolor faucibus ultrices. Ut vel urna eu purus volutpat euismod ornare vel elit. Donec ornare tristique eros non feugiat. Cras pharetra congue mauris. Mauris dictum, urna vitae vehicula pellentesque, quam urna ullamcorper mauris, vitae adipiscing nulla lorem non justo. 
+  </p>
 
 
   <h2><%= link_to "Butterflies", butterflies_path %></h2>
@@ -25,9 +33,24 @@
 
   <h2>Dragonflies and Damselflies</h2>
 
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla interdum justo vitae dolor faucibus ultrices. Ut vel urna eu purus volutpat euismod ornare vel elit. Donec ornare tristique eros non feugiat. Cras pharetra congue mauris. Mauris dictum, urna vitae vehicula pellentesque, quam urna ullamcorper mauris, vitae adipiscing nulla lorem non justo. 
+  </p>
+
+
   <h2><%= link_to "Fungi", fungi_path %></h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla interdum justo vitae dolor faucibus ultrices. Ut vel urna eu purus volutpat euismod ornare vel elit. Donec ornare tristique eros non feugiat. Cras pharetra congue mauris. Mauris dictum, urna vitae vehicula pellentesque, quam urna ullamcorper mauris, vitae adipiscing nulla lorem non justo. 
+  </p>
 
   <h2>Moths</h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla interdum justo vitae dolor faucibus ultrices. Ut vel urna eu purus volutpat euismod ornare vel elit. Donec ornare tristique eros non feugiat. Cras pharetra congue mauris. Mauris dictum, urna vitae vehicula pellentesque, quam urna ullamcorper mauris, vitae adipiscing nulla lorem non justo. 
+  </p>
 
   <h2><%= link_to "Plants", plants_path %></h2>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla interdum justo vitae dolor faucibus ultrices. Ut vel urna eu purus volutpat euismod ornare vel elit. Donec ornare tristique eros non feugiat. Cras pharetra congue mauris. Mauris dictum, urna vitae vehicula pellentesque, quam urna ullamcorper mauris, vitae adipiscing nulla lorem non justo. 
+  </p>
+</section>
 </article>
