--- a/app/views/sz_core/butterflies.html.erb
+++ b/app/views/sz_core/butterflies.html.erb
@@ -1,10 +1,16 @@
 <article>
-  <section class="taxon">
+<div id = "side">
+  <%= image_tag "butterflies/White_Letter_Hairstreak.jpg", :class => 'butterfliesLeft',
+                    :title => 'White-letter Hairstreak. Copyright: Jeremy Early', :alt => "White-letter Hairstreak butterfly" %>
+                  </div>
+
+  
+   
+    <section id = "sidebar">
     <h1>Butterflies</h1>
 
     <p>
-      <%= image_tag "butterflies/White_Letter_Hairstreak.jpg", :class => 'butterfliesLeft',
-                    :title => 'White-letter Hairstreak. Copyright: Jeremy Early', :alt => "White-letter Hairstreak butterfly" %>
+      
       Mole
       Valley is nationally important for its butterflies. These are cold-blooded
       insects that need warmth, shelter and the right plants to be able to fly, feed
@@ -21,6 +27,10 @@
       Peacock feed on nettles, and these butterflies are found in many more places,
       including parks and gardens.
     </p>
+  </section>
+ 
+<section id = "maintext">
+
 
     <p>
       Many
@@ -46,12 +56,19 @@
       spring through to autumn (Buddleia, Michaelmas Daisy and Aubrieta are among the
       best flowers for this).
     </p>
-  </section>
 
-  <section class="taxon">
+  
+</section>
+
+ <div id = "side">
     <p>
       <%= image_tag "butterflies/Silver_Spotted_Skipper.jpg", :class => 'butterfliesRight',
                     :title => 'Silver-spotted Skipper. Copyright: Jeremy Early', :alt => "Silver-spotted Skipper butterfly" %>
+</p>
+                  </div>
+                </br>
+              <section id = "maintext">
+
       <strong>Silver-spotted Skipper:</strong> This little butterfly
       flies in August on the downs. Box Hill is a good place to see it. A few decades
       ago it was so rare nationally that it was feared it might become extinct in
@@ -65,13 +82,23 @@
       it has recovered in numbers and spread to new sites. It flies close to the
       ground on hot August days, visiting Stemless Thistles for nectar, but if
       disturbed it flies away very fast.
-    </p>
+    
   </section>
+</br>
+</br>
 
-  <section class="taxon">
+ <div id = "side">
+
+ 
     <p>
       <%= image_tag "butterflies/adonis_blue.jpg", :class => 'butterfliesLeft',
                     :title => 'Adonis Blue on Eyebright', :alt => "Adonis Blue butterfly on eyebright" %>
+</p>
+                  </div>
+
+                </br>
+
+<section id = "maintext">
       <strong>The Adonis Blue </strong>is a
       vivid blue butterfly that is a favourite of butterfly enthusiasts. It has two
       generations a year, and can be seen in May and again in August. Denbies
@@ -87,13 +114,21 @@
       excited cluster around it. This helps to protect it from predators and parasites,
       and both the caterpillar and the ant benefit from the association.
 
-    </p>
+    
   </section>
 
-  <section class="taxon">
+</br>
+</br>
+</br>
+  <div id = "side">
     <p>
       <%= image_tag "butterflies/Brown_Hairstreak.jpg", :class => 'butterfliesRight',
                     :title => 'Brown Hairstreak. Copyright: Jeremy Early', :alt => "Brown hairstreak butterfly" %>
+                  </p>
+                  </div>
+                </br>
+              
+<section id = "maintext">
       <strong>Brown Hairstreak: </strong>This
       is the last British butterfly to emerge in the summer, not flying until August
       and September. It is nationally scarce, with scattered populations in a few
@@ -106,13 +141,21 @@
       all winter till they hatch in April, and volunteers map the distribution of the
       butterfly by searching for them. It gives enthusiasts a chance to spot
       butterflies even in the coldest months!
-    </p>
+    
   </section>
-
-  <section class="taxon">
+</br>
+  
+  <div id = "side">
     <p>
       <%= image_tag "butterflies/Purple-Emperor.jpg", :class => 'butterfliesLeft',
                     :title => 'Purple Emperor. Copyright: Jeremy Early', :alt => "Purple Emperor butterfly" %>
+                  </p>
+                </div>
+
+              </br>
+            
+
+              <section id = "maintext">
       <strong>Purple Emperor: </strong>
       People
       come from all over Britain to Mole Valley to see this spectacular butterfly!
@@ -126,13 +169,19 @@
       approached – with care – to obtain good views. Eggs are laid on Sallow bushes
       and the caterpillars feed on the leaves in late summer and the following
       spring, spending the winter camouflaged on the stems.
-    </p>
+    
   </section>
+</br>
 
-  <section class="taxon">
+   <div id = "side">
     <p>
       <%= image_tag "butterflies/Silver_Washed_Fritillary.jpg", :class => 'butterfliesRight',
                     :title => 'Silver-washed Fritillary. Copyright: Jeremy Early', :alt => "Silver-washed Fritillary butterfly" %>
+                  </p>
+                  <div>
+                 
+<section id = "sidebar">
+                  
       <strong>Silver-washed Fritillary: </strong>This is another large, spectacular woodland
       butterfly. It occurs in several woods in Mole Valley and can be seen from late
       June till mid-August in sunny rides and clearings, where it feeds on flowers,
@@ -147,6 +196,6 @@
       It also needs violets for its caterpillars to feed on, but unlike the
       Silver-washed, this Fritillary is a grassland butterfly, feeding on Hairy
       Violet in longer grass and around the edge of patches of scrub.
-    </p>
-  </section>
+    </section>
+
 </article>
