--- a/app/views/sz_core/butterflies.html.erb
+++ b/app/views/sz_core/butterflies.html.erb
@@ -172,15 +172,15 @@
     
   </section>
 </br>
+    </br>
 
-   <div id = "side">
-    <p>
+    <div id = "side">
       <%= image_tag "butterflies/Silver_Washed_Fritillary.jpg", :class => 'butterfliesRight',
                     :title => 'Silver-washed Fritillary. Copyright: Jeremy Early', :alt => "Silver-washed Fritillary butterfly" %>
-                  </p>
-                  <div>
+           </div>       
+               
                  
-<section id = "sidebar">
+
                   
       <strong>Silver-washed Fritillary: </strong>This is another large, spectacular woodland
       butterfly. It occurs in several woods in Mole Valley and can be seen from late
@@ -196,6 +196,7 @@
       It also needs violets for its caterpillars to feed on, but unlike the
       Silver-washed, this Fritillary is a grassland butterfly, feeding on Hairy
       Violet in longer grass and around the edge of patches of scrub.
-    </section>
+  
+  </br>
 
 </article>
