--- a/app/views/sz_core/plants.html.erb
+++ b/app/views/sz_core/plants.html.erb
@@ -1,8 +1,5 @@
 <article>
-  <section class="taxon">
-    <h1>Flowering Plants</h1>
-
-  </section>
+  
 
   <section class="taxon">
 
@@ -56,12 +53,21 @@
       primroses and bluebells.</p>
   </section>
 
-  <section class="taxon">
+ 
+    <div id = "side">
     <h2>Man Orchid <em>Orchis anthropophora</em></h2>
     <%= image_tag "plants/man_orchid_close.jpg", :class => 'fungi',
                    :title => 'Close up of Man Orchid. Copyright: Paul Krause', :alt => "Man Orchid" %>
+</div>
 
+<section id = "sidebar">
     <p>
+    </br>
+  </br>
+</br>
+</br>
+  </br>
+</br>
       Some sixteen species of wild orchid can be found in Mole Valley;
       some in the clay woods and others on the chalk downs and woods. The Man Orchid
       is perhaps one of the most intriguing because the shape of its flower resembles
