--- a/app/views/sz_core/fungi.html.erb
+++ b/app/views/sz_core/fungi.html.erb
@@ -1,6 +1,6 @@
 <article>
 
-  <section class="taxon">
+  <section id = "maintext">
     <h1>Mole Valley Fungi</h1>
 
     <p>
@@ -11,21 +11,36 @@
     </p>
   </section>
 
-  <section class="taxon">
-    <h2>Penny Bun <em>Boletus edulis</em></h2>
+  <div id = "side">
+   
 
     <p>
       <%= image_tag "fungi/Bole_edul002.jpg", :class => 'fungi', :alt => "Penny Bun fungus" %>
+</p>
+</div>
+
+<section id = "sidebar">
+</br>
+       <h2>Penny Bun <em>Boletus edulis</em></h2>
       A prized edible species, found in broadleaved and mixed woodland. Forms
       (mycorrhizal) association with the tree roots.
       One of the <q>sponge caps</q> with pores in place of gills on its lower surface.
     </p>
   </section>
 
-  <section class="taxon">
-    <h2>Death Cap <em>Amanita phalloides</em></h2>
+</br>
+</br>
+</br>
+</br>
+
+  <div id = "side">
+    
     <p>
       <%= image_tag "fungi/Death-Cap.jpg", :class => 'fungi', :alt => "Death Cap fungus" %>
+    </p>
+  </div>
+</br>
+      <h2>Death Cap <em>Amanita phalloides</em></h2>
       Highly toxic, a quarter of a cap kills very unpleasantly &#8211 but not slugs!
       Most of the Amanita family are poisonous.
       Learn to recognise these fungi if you collect for the table.
@@ -33,31 +48,57 @@
     </p>
   </section>
 
-  <section class="taxon">
-    <h2>Sulphur Polypore; Chicken of the Woods <em>Laetiporus sulphureus</em></h2>
-    <p>
+  </br>
+</br>
+</br>
+</br>
+</br>
+  
+    <div id = "side">
+    
       <%= image_tag "fungi/Laetip_012.jpg", :class => 'fungi', :alt => "Sulphur Polypore fungus" %>
+    
+  </div>
+<section id = "maintext">
+      <h2>Sulphur Polypore; Chicken of the Woods <em>Laetiporus sulphureus</em></h2>
       Brilliant yellow, with salmon-orange tones.Grows on trunks of living trees,
       mainly oak and chestnut, and also even on Yew*, causing heart rots.
       Edible, and prized in USA, but can cause gastro-intestinal upsets. <br/>
       [* <em>do not eat any picked from this toxic tree!</em>]
-    </p>
-  </section>
+    </section>
+  </br>
+</br>
+</br>
+</br>
 
-  <section class="taxon">
+  <div id = "side">
+    <%= image_tag "fungi/ElfcapAsh02.jpg", :class => 'fungi', :alt => "Scarlet Elfcap fungus" %>
+  </div>
+  <section id = "maintext">
     <h2>Scarlet elfcup <em>Sarcosypha austriaca</em></h2>
     <p>
-      <%= image_tag "fungi/ElfcapAsh02.jpg", :class => 'fungi', :alt => "Scarlet Elfcap fungus" %>
+    
       This bright cup fungus (ascomycete) is occasionally found in Mole valley,
       very early in the year, growing on old mossy fallen trunks in
       woodland, especially on hazel and elm. The cups are 1-5 cm. across.
     </p>
   </section>
 
-  <section class="taxon">
+  </br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+  <div id = "side">
+      <%= image_tag "fungi/Verpcon04.jpg", :class => 'fungi', :alt => "Thimble Morel fungus" %>
+    </div>
+
+      <section class="taxon">
     <h2>Thimble Morel <em>Verpa conica</em></h2>
     <p>
-      <%= image_tag "fungi/Verpcon04.jpg", :class => 'fungi', :alt => "Thimble Morel fungus" %>
       Quite rare and confined to <q>hawthorn scrub on chalk</q>. There is much of this
       in Mole Valley, and 2004 was a good year for this small and
       elusive spring species. An ascomycete with a hollow stem.
